增加格式化

--- a/snippets/package.json
+++ b/snippets/package.json
@@ -7,10 +7,14 @@
   "contributes": {
     "snippets": [
       {
+        "language": "typescriptreact",
+        "path": "./typescriptreact.json"
+      },
+      {
         "language": "javascript",
         "path": "./javascript.json"
       },
-    {
+      {
         "language": "php",
         "path": "./php.json"
       }
