--- a/snippets/package.json
+++ b/snippets/package.json
@@ -17,6 +17,10 @@
       {
         "language": "php",
         "path": "./php.json"
+      },
+      {
+        "language": "vue",
+        "path": "./uniapp.json"
       }
     ]
   }
